# Fantasy-Football

./: .gitignore  README  README.md  get_player_data  pyproject.toml
ML/: GW_points.ipynb
app/: app.py
app/pages/: player_analytics.py
utils/: player_functions.py
