[project]
name = "fantasy-football"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.8",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
